--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ android {
 }
 
 dependencies {
+    implementation project(":navigation")
+
     implementation "androidx.appcompat:appcompat:1.3.1"
 
     implementation "androidx.compose.ui:ui:1.0.4"
