--- a/dashboard/build.gradle
+++ b/dashboard/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.application"
+    id "com.android.library"
     id "kotlin-android"
     id "kotlin-kapt"
     id "dagger.hilt.android.plugin"
@@ -7,9 +7,6 @@ plugins {
 
 android {
     defaultConfig {
-        applicationId "com.github.plnice.nestednavhosthilt"
-        versionCode 1
-        versionName "1.0"
         minSdkVersion 23
         compileSdkVersion 31
         targetSdkVersion 31
@@ -27,40 +24,19 @@ android {
     buildFeatures {
         compose true
     }
-
     composeOptions {
         kotlinCompilerExtensionVersion "1.0.4"
-    }
-
-    buildTypes {
-        debug {
-            applicationIdSuffix ".debug"
-            debuggable true
-            minifyEnabled false
-        }
-        release {
-            debuggable false
-            zipAlignEnabled true
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-        }
     }
 }
 
 dependencies {
     implementation project(":navigation")
-    implementation project(":authentication")
-    implementation project(":dashboard")
-
-    implementation "androidx.appcompat:appcompat:1.3.1"
 
     implementation "androidx.compose.ui:ui:1.0.4"
     implementation "androidx.compose.ui:ui-tooling:1.0.4"
     implementation "androidx.compose.foundation:foundation:1.0.4"
     implementation "androidx.compose.material:material:1.0.4"
     implementation "androidx.activity:activity-compose:1.3.1"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
 
     implementation "com.google.dagger:hilt-android:2.39.1"
     kapt "com.google.dagger:hilt-compiler:2.39.1"
